# file-editor_OWN_CPP

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  clang-format-all.sh  file_editor.cpp  file_editor.hpp  main.cpp  null.d
.github/: cmake.yml
.github/workflows/: cmake.yml  codeql-analysis.yml  linter.yml  linux_build.yml
cmake/: ConfigSafeGuards.cmake  Doctest.cmake
debug/: recv_debug.cpp  send_debug.cpp  send_debug.hpp
include/: file_editor.hpp  file_type.hpp  send_debug.hpp  syntax_highlight.hpp
source/: file_editor.cpp  main.cpp  recv_debug.cpp  send_debug.cpp
src/: file_editor.cpp  helper_functions.cpp  main.cpp
src/file_editor/: buffer_handling.cpp  editor_handling.cpp  file_editor.cpp  file_handling.cpp  init.cpp  terminal_handling.cpp
src/file_type/: file_type.cpp
src/syntax/: syntax_highlight.cpp
test/file_type/: file_type_test.hpp
tests/: CMakeLists.txt  main.cpp
tests/file_editor/: buffer_handling_test.cpp
tests/file_type/: file_type_test.cpp
